--- a/landing/index.html
+++ b/landing/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WOKFullstack</title>
+  <title>WÖKDigital</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="woklanding.css">
 
@@ -13,11 +13,17 @@
 <body>
         <div class="navbar">
           <div class="logo">
-            <h1 class="wok">WÖK</h1><ul class="links" style="list-style-type:none;">
+            <h1 class="wok">WÖK</h1>
+            <ul class="links" style="list-style-type:none;">
               <li class="link-item" id="about"><a href="aboutwok.html">ABOUT</li>
               <li class="link-item" id="portfolio"><a href="wokportfolio.html">PORTFOLIO</a></li>
               <li class="link-item" id="contact"><a href="contactwok.html">CONTACT</a></li>
             </ul>
+            <div class="menu-icon">
+              <div class="line"></div>
+              <div class="line"></div>
+              <div class="line"></div>
+            </div>
             <h1 class="fullstack">Fullstack</h1>
           </div>
             
