--- a/landing/index.html
+++ b/landing/index.html
@@ -20,9 +20,11 @@
               <li class="link-item" id="contact"><a href="contactwok.html">CONTACT</a></li>
             </ul>
             <div class="menu-icon">
-              <div class="line"></div>
-              <div class="line"></div>
-              <div class="line"></div>
+                <div class="lines">
+                  <div class="line"></div>
+                  <div class="line"></div>
+                  <div class="line"></div>
+                </div>
             </div>
             <h1 class="fullstack">Fullstack</h1>
           </div>
