styling: color scheme and spacing with the mater cdn now in html

--- a/landing/index.html
+++ b/landing/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WÖKDigital</title>
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="woklanding.css">
 
@@ -20,11 +22,9 @@
               <li class="link-item" id="contact"><a href="contactwok.html">CONTACT</a></li>
             </ul>
             <div class="menu-icon">
-                <div class="lines">
                   <div class="line"></div>
                   <div class="line"></div>
                   <div class="line"></div>
-                </div>
             </div>
             <h1 class="fullstack">Fullstack</h1>
           </div>
