--- a/landing/index.html
+++ b/landing/index.html
@@ -5,31 +5,67 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WÖKDigital</title>
-  
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="woklanding.css">
 
 </head>
 
 <body>
-        <div class="navbar">
-          <div class="logo">
-            <h1 class="wok">WÖK</h1>
-            <ul class="links" style="list-style-type:none;">
-              <li class="link-item" id="about"><a href="aboutwok.html">ABOUT</li>
-              <li class="link-item" id="portfolio"><a href="wokportfolio.html">PORTFOLIO</a></li>
-              <li class="link-item" id="contact"><a href="contactwok.html">CONTACT</a></li>
-            </ul>
-            <div class="menu-icon">
-                  <div class="line"></div>
-                  <div class="line"></div>
-                  <div class="line"></div>
-            </div>
-            <h1 class="fullstack">Fullstack</h1>
+  <div class="navbar">
+    <div class="logo">
+      <h1 class="wok">WÖK</h1>
+      <ul class="links" style="list-style-type:none;">
+        <li class="link-item" id="about"><a href="aboutwok.html">ABOUT</li>
+        <li class="link-item" id="portfolio"><a href="wokportfolio.html">PORTFOLIO</a></li>
+        <li class="link-item" id="contact"><a href="contactwok.html">CONTACT</a></li>
+      </ul>
+      <div class="menu-icon">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="dropdown">
+        <ul class="links" style="list-style-type:none;">
+          <li class="link-item" id="about"><a href="aboutwok.html">ABOUT</li>
+          <li class="link-item" id="portfolio"><a href="wokportfolio.html">PORTFOLIO</a></li>
+          <li class="link-item" id="contact"><a href="contactwok.html">CONTACT</a></li>
+        </ul>
+      </div>
+      <h1 class="fullstack">Fullstack</h1>
+    </div>
+    <br><br><br>
+
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-image">
+            <img src="landingassets/collaboration">
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
           </div>
-            
+          <div class="card-content">
+            <p>Mission</p>
+          </div>
         </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card">
+          <div class="card-image">
+            <img src="images/sample-1.jpg">
+            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+          </div>
+          <div class="card-content">
+            <p>Vision</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 
 
 
