--- a/landing/index.html
+++ b/landing/index.html
@@ -35,14 +35,13 @@
       </div>
       <h1 class="fullstack">Fullstack</h1>
     </div>
-    <br><br><br>
-
+    <br>
     <div class="row">
       <div class="col s12 m6">
-        <div class="card">
+        <div class="card mission">
           <div class="card-image">
-            <img src="landingassets/collaboration">
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <img src="landingassets/collaboration.jpg">
+            
           </div>
           <div class="card-content">
             <p>Mission</p>
@@ -53,10 +52,10 @@
 
     <div class="row">
       <div class="col s12 m6">
-        <div class="card">
+        <div class="card vision">
           <div class="card-image">
-            <img src="images/sample-1.jpg">
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons">add</i></a>
+            <img src="landingassets/big-data.jpg">
+            
           </div>
           <div class="card-content">
             <p>Vision</p>
